--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
+<aside class="side-menu" id="side-menu-left"></aside>
 <div id="viewer-container"></div>
+<div id="loading-overlay" class="loading-overlay hidden">
+  <h1 id="loading-progress" class="loading-progress"></h1>
+</div>
 <router-outlet></router-outlet>
